--- a/views/memos/new.ejs
+++ b/views/memos/new.ejs
@@ -8,7 +8,7 @@
     <label>Location</label>
     <input type="text" name="location">
     <label>Note</label>
-    <input type="text" name="note">
+    <textarea type="text" name="note"></textarea>
     <input type="reset" value="Clear">
     <input type="submit" value="Save memo">
 </form>
