Implemented Contacts but routes need protecting. Pre adding authorisation

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,7 +10,7 @@
     <nav>
         <a href="/memos/new">SCLE</a>
         <a href="/memos">All memos</a>
-        <a href="/community">Contacts</a>
+        <a href="/contacts">Contacts</a>
         <% if (user) { %>
             <a href="/logout">Log out</a>
           <% } else { %>
