Working. GoogleAPI access not availalbe

--- a/views/memos/edit.ejs
+++ b/views/memos/edit.ejs
@@ -8,7 +8,7 @@
     <label>Location</label>
     <input type="text" name="location" value="<%= memo.location %>">
     <label>Note</label>
-    <input type="text" name="note" value="<%= memo.note %>">
+    <textarea type="text" name="note" value="<%= memo.note %>"></textarea>
     <input type="submit" value="Update memo">
 </form>
 
