Last save had date bugs. Fixed. Current version working

--- a/views/memos/edit.ejs
+++ b/views/memos/edit.ejs
@@ -9,6 +9,7 @@
     <input type="text" name="location" value="<%= memo.location %>">
     <label>Note</label>
     <textarea type="text" name="note" value="<%= memo.note %>"></textarea>
+    <a href="/memos" class="button">Cancel</a>
     <input type="submit" value="Update memo">
 </form>
 
