Fixed edit textarea pre-fill. Added double-confirmation on delete

--- a/views/memos/edit.ejs
+++ b/views/memos/edit.ejs
@@ -8,7 +8,7 @@
     <label>Location</label>
     <input type="text" name="location" value="<%= memo.location %>">
     <label>Note</label>
-    <textarea type="text" name="note" value="<%= memo.note %>"></textarea>
+    <textarea name="note"><%= memo.note %></textarea>
     <a href="/memos" class="button">Cancel</a>
     <input type="submit" value="Update memo">
 </form>
