--- a/views/memos/index.ejs
+++ b/views/memos/index.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header') %>
 
-<h1>/m</h1>
+<h1>Memos</h1>
 
 <section>
 <% memos.forEach(function(m) { %>
@@ -13,8 +13,19 @@
     <form action="/memos/<%= m._id %>/edit" method="GET">
         <button type="submit">Edit</button>
     </form>
+    <% if (user && user._id.equals(m.user)) { %>
+        <form action="/memos/<%= m._id %>?_method=DELETE" method="POST" onsubmit="return confirmDelete()">
+            <button type="submit">Delete</button>
+        </form>
+    <% } %>
     <hr>
 <% }); %>
 </section>
+
+<script>
+function confirmDelete() {
+    return confirm('Are you sure you want to delete this memo?');
+}
+</script>
 
 <%- include('../partials/footer') %>
