--- a/views/memos/new.ejs
+++ b/views/memos/new.ejs
@@ -10,8 +10,10 @@
     <label>Note</label>
     <textarea type="text" name="note"></textarea>
     <input type="file" name="image">
+    <a href="/memos" class="button">Cancel</a>
     <input type="reset" value="Clear">
     <input type="submit" value="Save memo">
+
 </form>
 
 
