--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- bootstrap -->
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
+
     <link rel="stylesheet" href="/stylesheets/style.css">
     <title>SCLE - Social Cognitive Limit Expander</title>
 </head>
@@ -10,7 +15,7 @@
     <nav>
         <a href="/memos/new">SCLE</a>
         <a href="/memos">All memos</a>
-        <a href="/contacts">Contacts</a>
+        <a href="/networks">Network</a>
         <% if (user) { %>
             <a href="/logout">Log out</a>
           <% } else { %>
