Memo and Network working with full CRUD

--- a/views/memos/index.ejs
+++ b/views/memos/index.ejs
@@ -7,6 +7,7 @@
 <% memos.forEach(function(m) { %>
     <p><%= m.formattedDate %></p>
     <p><%= m.location %></p>
+    <p><%= m.networkName %></p>
     <p><%= m.note %></p>
     <% if (m.image && m.image !== 'defaultImageURLHere') { %>
         <img src="<%= m.image %>" alt="uploaded image">
