--- a/views/memos/new.ejs
+++ b/views/memos/new.ejs
@@ -3,13 +3,20 @@
 <h1>/m</h1>
 
 <form action="/memos" enctype="multipart/form-data" method="POST">
+    <label>I met with</label>
+    <input type="text" name="networkName" id="networkName" list="networkNamesList" placeholder="Select or type a new network name" required>
+    <datalist id="networkNamesList">
+        <% networks.forEach(function(network) { %>
+            <option value="<%= network.name %>"></option>
+        <% }); %>
+    </datalist>
+    <label>at</label>
+    <input type="text" name="location" placeholder="location">
+    <label>about</label>
+    <textarea type="text" name="note" placeholder="things to remember"></textarea>
+    <input type="file" name="image">
     <label>Date</label>
     <input type="date" name="date" value="<%= today %>">
-    <label>Location</label>
-    <input type="text" name="location">
-    <label>Note</label>
-    <textarea type="text" name="note"></textarea>
-    <input type="file" name="image">
     <a href="/memos" class="button">Cancel</a>
     <input type="reset" value="Clear">
     <input type="submit" value="Save memo">
