--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/stylesheets/style.css">
     <title>SCLE - Social Cognitive Limit Expander</title>
 </head>
+<div class="container-xxl">
 <body>
     <nav>
         <a href="/memos/new">SCLE</a>
@@ -19,4 +20,3 @@
             <a href="/auth/google" class="login">Log in with Google</a>
         <% } %>
     </nav>
-    <main>
