--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,16 +1,57 @@
-body {
+/* body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
+} */
 
-a {
-  color: #00B7FF;
-}
+/* a {
+  color: #AA00FF;
+} */
 
-.login img {
+/* .login img {
   height: 30px;
-}
+} */
 
 img {
   height: 60px;
+}
+
+body {
+  font-family: "Red Hat Mono", monospace;
+  margin-top: 40px;
+}
+
+h1 {
+  font-weight: 300;
+}
+
+h2 {
+  font-weight: 300;
+  letter-spacing: -0.05em;
+  padding-bottom: 20px;
+}
+
+div {
+  padding-bottom: 20px;
+}
+
+#cta {
+  padding-top: 20px;
+}
+
+/* #logo {
+  padding-left: 0px;
+} */
+
+.navbar-nav .nav-item .nav-link img {
+  width: 28px; 
+  height: 28px; 
+}
+
+/* #nav-icon {
+  width: 28px; 
+  height: 28px; 
+} */
+
+.navbar-toggler {
+  border: var(--bs-border-width) solid rgb(0 0 0 / 0%);
 }
