--- a/views/memos/new.ejs
+++ b/views/memos/new.ejs
@@ -1,11 +1,13 @@
 <%- include('../partials/header') %>
 
 <div class="row">
-    <h1>/m</h1>
+    <div class="offset-md-3 col-md-6">
+        <h2>NEW MEMO</h2>
+    </div>
 <form action="/memos" enctype="multipart/form-data" method="POST">
     <div class="offset-md-3 col-md-6">
         <label class="form-label">I met with</label>
-        <input class="form-control" type="text" name="networkName" id="networkName" list="networkNamesList" placeholder="Select or type a new name to add" required>
+        <input class="form-control" type="text" name="networkName" id="networkName" list="networkNamesList" placeholder="(select or type a new name)" required>
         <datalist id="networkNamesList">
             <% networks.forEach(function(network) { %>
                 <option value="<%= network.name %>"></option>
@@ -20,14 +22,15 @@
         <label class="form-label">about</label>
         <textarea class="form-control" name="note" placeholder="things to remember for next time (memo)"></textarea>
     </div>
-    <div class="offset-md-3 col-md-6">
-        <input class="form-control" type="file" name="image">
-    </div>
-    <div class="offset-md-3 col-md-6">
-        <label>Date</label>
+    <div class="offset-md-3 col-md-3">
+        <label>on</label>
         <input class="form-control" type="date" name="date" value="<%= today %>">
     </div>
     <div class="offset-md-3 col-md-6">
+        <label>(optional)</label>
+        <input class="form-control" type="file" name="image">
+    </div>
+    <div id="cta" class="offset-md-3 col-md-6">
         <a href="/memos" class="btn btn-link" role="button">Cancel</a>
         <button class="btn btn-outline-secondary" type="reset" value="Clear">Clear</button>
         <button class="btn btn-outline-primary" type="submit" value="Save memo">Save</button>
