--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,18 +5,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-       <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Red+Hat+Mono:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/stylesheets/style.css">
     <title>SCLE - Social Cognitive Limit Expander</title>
 </head>
-<div class="container-xxl">
-<body>
-    <nav>
-        <a href="/memos/new">SCLE</a>
-        <a href="/memos">All memos</a>
-        <a href="/networks">Network</a>
-        <% if (user) { %>
-            <a href="/logout">Log out</a>
-          <% } else { %>
-            <a href="/auth/google" class="login">Log in with Google</a>
-        <% } %>
+
+<div class="container">
+    <div class="row">
+    <div class="offset-md-3 col-md-6 ps-0 pe-0">
+
+    <nav class="navbar navbar-expand-md" style="background-color: white;">
+
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"><h1>SCLE</h1></a>
+
+          <button class="navbar-toggler mb-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+
+            <ul class="navbar-nav">
+              <li class="nav-item mt-2">
+                <a class="nav-link" aria-current="page" href="/memos/new"><img src="/images/icon-add.png" alt="add memo"></a>
+              </li>
+              <li class="nav-item mt-2">
+                <a class="nav-link" href="/memos"><img src="/images/icon-pin.png" alt="view all memos"></a>
+              </li>
+              <li class="nav-item mt-2">
+                <a class="nav-link" href="/networks"><img src="/images/icon-person-pin.png" alt="view all contacts"></a>
+              </li>
+              <li class="nav-item mt-2">
+                <% if (user) { %>
+                    <a class="nav-link" href="/logout"><img src="/images/icon-logout.png" alt="logout" id="nav-icon"></a>
+                <% } else { %>
+                    <a class="nav-link" href="/auth/google" class="login"><img src="/images/icon-login.png" alt="login" id="nav-icon"></a>
+                <% } %>
+              </li>
+            </ul>
+
+          </div>
+        </div>
+
     </nav>
+    
+    </div>
+    </div>
+
+<body>
