--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-md" style="background-color: white;">
 
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><h1>SCLE</h1></a>
+          <a class="navbar-brand" href="/memos/new"><h1>SCLE</h1></a>
 
           <button class="navbar-toggler mb-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
