--- a/views/memos/index.ejs
+++ b/views/memos/index.ejs
@@ -7,16 +7,16 @@
         <h2>MEMOS</h2>
 
         <% memos.forEach(function(m) { %>
-        <div>
-            <p class="memo"><%= m.formattedDate %></p>
-            <p class="memo"><%= m.location %></p>
-            <p class="memo bold-name"><%= m.networkName %></p>
-            <p class="memo"><%= m.note %></p>
+        <div class="memo">
+            <p class="memo-details"><%= m.formattedDate %></p>
+            <p class="memo-details"><%= m.location %></p>
+            <p class="memo-details bold-name"><%= m.networkName %></p>
+            <p class="memo-details"><%= m.note %></p>
             <% if (m.image && m.image !== 'defaultImageURLHere') { %>
                 <img src="<%= m.image %>" alt="uploaded image">
+            <% } %>
             
             <section class="memo-cta">
-                <% } %>
                     <form action="/memos/<%= m._id %>/edit" method="GET">
                         <button type="submit" class=" btn memo-icon"><img src="/images/icon-edit.png" alt="edit"></button>
                     </form>
@@ -27,7 +27,7 @@
                 <% } %>
             </section>
 
-            <hr>
+            <hr class="memo-divider">
         </div>
         <% }); %>
 
