Working. Added pagination to memos/index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,8 @@
     <div class="offset-md-3 col-md-6 ps-0 pe-0">
 
         <div>
-            <p>Recalling details from conversations can be hard.</p>
-            <p>Let's fix that.</p>
+            <h2>Recalling details from conversations can be hard.</h2>
+            <h2>Let's fix that.</h2>
         </div>
 
         <div>
