--- a/views/memos/new.ejs
+++ b/views/memos/new.ejs
@@ -22,9 +22,9 @@
         </div>
         <div>
             <label class="form-label">about</label>
-            <textarea class="form-control" name="note" placeholder="things to remember for next time (memo)"></textarea>
+            <textarea class="form-control" name="note" placeholder="things to remember for next time (memo)" rows="5"></textarea>
         </div>
-        <div>
+        <div class="col-md-6">
             <label>on</label>
             <input class="form-control" type="date" name="date" value="<%= today %>">
         </div>
