--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,15 +1,3 @@
-/* body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-} */
-
-/* a {
-  color: #AA00FF;
-} */
-
-/* .login img {
-  height: 30px;
-} */
 
 img {
   height: 60px;
@@ -27,7 +15,6 @@ h1 {
 
 h2 {
   font-weight: 300;
-  letter-spacing: -0.05em;
   padding-bottom: 20px;
 }
 
@@ -39,43 +26,34 @@ div {
   padding-top: 20px;
 }
 
-/* #logo {
-  padding-left: 0px;
-} */
-
 .navbar-nav .nav-item .nav-link img {
   width: 28px; 
   height: 28px; 
 }
 
-/* #nav-icon {
-  width: 28px; 
-  height: 28px; 
-} */
-
 .navbar-toggler {
   border: var(--bs-border-width) solid rgb(0 0 0 / 0%);
 }
 
-.memo {
+.entry {
   position: relative;
 }
 
-.memo-details {
+.entry-details {
   margin-bottom: 0px;
 }
 
-.memo-icon img {
+.entry-icon img {
   width: 20px;
   height: 20px;
   opacity: 0.3;
 }
 
-.memo-icon:hover img{
+.entry-icon:hover img{
   opacity: 1;
 }
 
-.memo-cta {
+.entry-cta {
   display: flex;
   align-items: center;
   justify-content: end;
@@ -90,6 +68,32 @@ div {
   margin-bottom: 28px;
 }
 
+.memo-divider-network {
+  margin-top: 28px;
+  margin-bottom: 0px;
+}
+
 .bold-name {
   font-weight: 600;
+}
+
+.img-profile {
+  object-fit: cover;
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+}
+
+.memo-img {
+  margin-top: 10px;
+}
+
+a {
+  color: black;
+}
+
+.iconButton {
+  width: 48px;
+  height: 48px;
+  margin-top: -12px;
 }
