--- a/views/networks/index.ejs
+++ b/views/networks/index.ejs
@@ -1,27 +1,44 @@
 <%- include('../partials/header') %>
 
-<h1>Networks</h1>
-<a href="/networks/new" class="iconButton">Add Someone</a>
+<div class="container">
+    <div class="row">
+    <div class="offset-md-3 col-md-6 ps-0 pe-0">
 
-<section>
-<% networks.forEach(function(n) { %>
-    <a href="/networks/<%= n._id %>"><p><%= n.name %></p></a> 
-    <p><%= n.email %></p>
-    <p><%= n.phone %></p>
-    <% if (n.image && n.image !== 'defaultImageURLHere') { %>
-        <img src="<%= n.image %>" alt="uploaded image" style="width: 40px; height: 40px;">
-    <% } %>
-    <form action="/networks/<%= n._id %>/edit" method="GET">
-        <button type="submit">Edit</button>
-    </form>
-    <% if (user && user._id.equals(n.user)) { %>
-        <form action="/networks/<%= n._id %>?_method=DELETE" method="POST" onsubmit="return confirmDelete()">
-            <button type="submit">Delete</button>
-        </form>
-    <% } %>
-    <hr>
-<% }); %>
-</section>
+        <section class="d-flex justify-content-between align-items-start">
+            <h2>CONTACTS</h2>
+            <a href="/networks/new" ><img src="/images/icon-add-contact.png" alt="add contact" class="iconButton"></a>
+        </section>
+
+
+        <% networks.forEach(function(n) { %>
+            <div class="float-start me-3">
+                <% if (n.image && n.image !== 'defaultImageURLHere') { %>
+                    <img src="<%= n.image %>" alt="uploaded image" class="img-fluid img-profile">
+                <% } %>
+            </div>
+
+            <div>
+                <div class="entry">
+                    <a href="/networks/<%= n._id %>"><p class="entry-details"><%= n.name %></p></a> 
+                    <p class="entry-details"><%= n.email ? n.email : '@' %></p>
+                    <p class="entry-details"><%= n.phone ? n.phone : '#' %></p>
+        
+                    <section class="entry-cta">
+                            <form action="/networks/<%= n._id %>/edit" method="GET">
+                                <button class="btn entry-icon" type="submit"><img src="/images/icon-edit.png" alt="edit"></button>
+                            </form>
+                            <form action="/networks/<%= n._id %>?_method=DELETE" method="POST" onsubmit="return confirmDelete()">
+                                <button class="btn entry-icon" type="submit"><img src="/images/icon-close.png" alt="delete"></button>
+                            </form>
+                    </section>
+                    <hr class="memo-divider-network">
+            </div>
+        </div>
+        <% }); %>
+
+    </div>
+    </div>
+</div>
 
 <script>
 function confirmDelete() {
