--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,9 +11,9 @@
 
         <div>
             <% if (user) { %>
-            <a href="/logout" class="btn btn-outline-primary" role="button">Log out</a>
+            <a href="/logout" class="btn btn-outline-primary btn-lg" role="button">Log out</a>
             <% } else { %>
-            <a href="/auth/google" class="btn btn-outline-primary" role="button">Log in with Google</a>
+            <a href="/auth/google" class="btn btn-lg btn-outline-primary" role="button">Log in with Google</a>
             <% } %>
         </div>
 
