--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,7 +27,7 @@
 
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 
-            <ul class="navbar-nav">
+            <ul class="navbar-nav text-end">
               <li class="nav-item mt-2">
                 <a class="nav-link" aria-current="page" href="/memos/new"><img src="/images/icon-add.png" alt="add memo"></a>
               </li>
