--- a/views/networks/show.ejs
+++ b/views/networks/show.ejs
@@ -1,6 +1,10 @@
 <%- include('../partials/header') %>
 
-<h1>/n</h1>
+<div class="container">
+    <div class="row">
+    <div class="offset-md-3 col-md-6 ps-0 pe-0">
+
+    <h2><%= n.name %></h2>
 
 <section>
     <% if (n.image && n.image !== 'defaultImageURLHere') { %>
@@ -37,5 +41,9 @@
         <hr>
     <% }); %>
 </section>
+
+    </div>
+    </div>
+</div>
 
 <%- include('../partials/footer') %>
