--- a/views/networks/new.ejs
+++ b/views/networks/new.ejs
@@ -10,7 +10,7 @@
     <p style="color: #FF1744;"><%= errorMessage %></p>
 <% } %>
 
-<form action="/networks" enctype="multipart/form-data" method="POST">
+<form action="/networks" enctype="multipart/form-data" method="POST" class="memoForm">
     <div>
         <label class="form-label">Name*</label>
         <input class="form-control" type="text" name="name" placeholder="name or nickname" required>
@@ -28,9 +28,14 @@
         <input class="form-control" type="file" name="image">
     </div>
     <div id="cta">
-        <a href="/networks" class="btn btn-link" role="button">Cancel</a>
-        <button class="btn btn-outline-secondary" type="reset" value="Clear">Clear</button>
-        <button class="btn btn-outline-primary" type="submit" value="Save memo">Save</button>
+        <div class="clearfix">
+            <a href="/networks" class="btn btn-link" role="button">Cancel</a>
+            <button class="btn btn-outline-secondary" type="reset" value="Clear">Clear</button>
+            <button class="btn btn-outline-primary" type="submit" value="Save memo">Save</button>
+            <div class="spinner-border text-secondary float-end mt-1" role="status" id="spinner" style="display: none;">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
     </div>
 </form>
 
@@ -38,4 +43,12 @@
     </div>
 </div>
 
+<script>
+    document.querySelector('.memoForm').addEventListener('submit', function() {
+        document.getElementById('spinner').style.display = 'block';
+    });
+</script>
+
 <%- include('../partials/footer') %>
+
+
